# dataarchival

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/award_archive/: __init__.py  cli.py
src/award_archive/api/: __init__.py  client.py  iprefer.py  seats_aero.py
src/award_archive/app/: explorer.py  server.py
src/award_archive/iprefer/: __init__.py  domain.py
src/award_archive/models/: __init__.py  availability.py  iprefer.py  seats_aero.py  source.py
src/award_archive/pipeline/: __init__.py  ingest.py  iprefer.py  seats_aero.py
src/award_archive/storage/: __init__.py  credentials.py  delta.py  hashing.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_s3_delta.py
tests/unit/: test_api_client.py  test_credentials.py  test_delta.py  test_edge_cases.py  test_hashing.py  test_iprefer.py  test_models.py  test_pipeline.py
