[project]
name = "award-archive"
version = "0.1.0"
description = "Data ingestion pipeline for award availability data with Delta Lake storage on S3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pandas>=2.1.0",
    "deltalake>=0.18.0",
    "boto3>=1.34.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
app = [
    "streamlit>=1.32.0",
    "duckdb>=0.10.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
award-archive = "award_archive.cli:main"
award-archive-server = "award_archive.app.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/award_archive"]

[tool.hatch.build.targets.sdist]
include = [
    "src/award_archive",
    "tests",
    "pyproject.toml",
    "README.md",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["src"]
